--- a/templates/hola.html
+++ b/templates/hola.html
@@ -126,10 +126,7 @@
     fetch('/get_data')
     .then(res => res.json())
     .then(data => {
-      //const capacityDict = data.capacityDict;
-      const capacityDict = {"Multiple Topics":0, "Room 195": 20, "Room 198":20, "Room 199":20};
-      console.log(capacityDict);
-      createRoomElements(data.realInitRoomDistribution);
+      createRoomElements(data.realInitRoomDistribution,data.capacityDict);
       document.getElementById("generate").style.display = "block";
       // You can store or log `data.backupRoomDict` if needed
     })
@@ -154,7 +151,7 @@
     
     
     
-    function createRoomElements(initRoomDistribution) {
+    function createRoomElements(initRoomDistribution, capacityDict) {
       //const labelContainer = document.getElementById("room-labels");
       //labelContainer.innerHTML = "";
       const roomContainer = document.getElementById("rooms-container");
