--- a/templates/hola.html
+++ b/templates/hola.html
@@ -122,7 +122,7 @@
       ]
     };
     const capacityDict={"Room Alpha": 0, "Room Beta": 6, "Room Gamma":4, "Room Delta": 4};*/
-    const capacityDict={};
+    var capacityDict={};
 	  
     fetch('/get_data')
     .then(res => res.json())
