--- a/templates/hola.html
+++ b/templates/hola.html
@@ -189,6 +189,8 @@
     
     
     function createRoomElements(initRoomDistribution) {
+      console.log(JSON.stringify(roomsDaysTimes));
+	    
       //const labelContainer = document.getElementById("room-labels");
       //labelContainer.innerHTML = "";
       const roomContainer = document.getElementById("rooms-container");
